# aurora

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
aurora-audio/: Cargo.toml
aurora-audio/src/: lib.rs
aurora-core/: Cargo.toml
aurora-core/src/: lib.rs
aurora-player/: Cargo.toml
aurora-player/src/: main.rs
aurora-script/: Cargo.toml
aurora-script/src/: lib.rs
aurora-ui/: Cargo.toml
aurora-ui/src/: lib.rs  main.slint  palette.rs
