[workspace]
members = [
    "aurora-core",
    "aurora-audio",
    "aurora-ui",
    "aurora-script",
    "aurora-player",
]
resolver = "2"

[workspace.dependencies]
rodio = "0.19"
slint = "1.9.0"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
palette = "0.7"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
lofty = "0.21"
