[package]
name = "aurora-player"
version = "0.1.0"
edition = "2021"

[dependencies]
aurora-core = { path = "../aurora-core" }
aurora-audio = { path = "../aurora-audio" }
aurora-ui = { path = "../aurora-ui" }
aurora-script = { path = "../aurora-script" }
tokio.workspace = true
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
slint.workspace = true
